lib/tests/fixtures/compiler/evaluation/func_too_may_args.pp
function test($x) {
    notice $x
}

test(foo)
test(foo, bar)
